--- a/build.xml
+++ b/build.xml
@@ -5,13 +5,13 @@
               directory with the processing instruction <?eclipse.ant.import?>
               as the first entry and export the buildfile again. --><project basedir="." default="build" name="TodoList Workshop Java Sols">
     <property environment="env"/>
-<!--    <property name="ECLIPSE_HOME" value="../../../../../Applications/Eclipse.app/Contents/Eclipse/"/>-->
+    <property name="ECLIPSE_HOME" value="../../../../../Applications/Eclipse.app/Contents/Eclipse/"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
     <path id="JUnit 4.libraryclasspath">
-        <pathelement location="lib/junit-4.12.jar"/>
-        <pathelement location="lib/hamcrest-core-1.3.jar"/>
+        <pathelement location="${ECLIPSE_HOME}plugins/org.junit_4.13.0.v20200204-1500.jar"/>
+        <pathelement location="${ECLIPSE_HOME}plugins/org.hamcrest.core_1.3.0.v20180420-1519.jar"/>
     </path>
     <path id="TodoList Workshop Java Sols.classpath">
         <pathelement location="bin"/>
@@ -21,8 +21,8 @@
     </path>
     <path id="run.TodoList Workshop Java Sols.classpath">
         <path refid="TodoList Workshop Java Sols.classpath" />
-        <pathelement location="lib/hamcrest-core-1.3.jar"/>
         <pathelement location="lib/junit-4.12.jar"/>
+        <pathelement location="lib/hamcrest-core-1.3.jar"/>
     </path>
     <target name="init">
         <mkdir dir="bin"/>
@@ -52,15 +52,15 @@
         </javac>
     </target>
     <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
-<!--    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">-->
-<!--        <copy todir="${ant.library.dir}">-->
-<!--            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>-->
-<!--        </copy>-->
-<!--        <unzip dest="${ant.library.dir}">-->
-<!--            <patternset includes="jdtCompilerAdapter.jar"/>-->
-<!--            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>-->
-<!--        </unzip>-->
-<!--    </target>-->
+    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
+        <copy todir="${ant.library.dir}">
+            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
+        </copy>
+        <unzip dest="${ant.library.dir}">
+            <patternset includes="jdtCompilerAdapter.jar"/>
+            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
+        </unzip>
+    </target>
     <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
         <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
         <antcall target="build"/>
